F&GDEV/src/objects/Expense__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Approved_Partial_Amount__c</fullName>
        <label>Approved Partial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_to_Pay_Date__c</fullName>
        <label>Approved to Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferred_Amount__c</fullName>
        <label>Deferred Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_to_Date__c</fullName>
        <label>Deferred to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Detail__c</fullName>
        <label>Expense Detail</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Rejected_Date__c</fullName>
        <label>Expense Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Database_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PD Database ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Non PD</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partial Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproject__c</fullName>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subproject__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_to_Pay_Date__c</columns>
        <columns>Approved_Partial_Amount__c</columns>
        <columns>Deferred_Amount__c</columns>
        <columns>Deferred_to_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Expense_Detail__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approval_Queue_Test</fullName>
        <columns>Expense_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Subproject__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Approval Queue</label>
    </listViews>
    <listViews>
        <fullName>Unapproved_Expenses</fullName>
        <columns>Subproject__c</columns>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Approved_to_Pay_Date__c</columns>
        <columns>Deferred_to_Date__c</columns>
        <columns>Expense_Detail__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>Approved_Partial_Amount__c</columns>
        <columns>Deferred_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_to_Pay_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unapproved Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>Exp-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>